Drawing Masks in Image Editor gone? #101501

Closed
opened 2022-09-30 18:18:42 +02:00 by Steffen Dünner · 17 comments

System Information
Operating system: Linux-5.15.0-48-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-30 14:38, hash: 42eda155df
3.3.0 LTS release shows the same wrong behaviour
Worked: 2.93.10 LTS

Short description of error
Drawing masks in Image Editor doesn't work any more. See the steps below to try it.

Exact steps for others to reproduce the error

  • Open Blender
  • Open an empty image editor and open any image you got available. Or create a new empty one.
  • Switch the Image Editor from "View" to "Mask"
  • Click on "New" to create a new mask
  • CTRL + click anywhere in the image to start drawing a new mask -> nothing happens
  • Press SHIFT + A to add a rectangle or circle mask -> Menu is greyed out, nothing can be added
    image.png

This in 3.3.0 LTS and 3.4.0 Master. In Blender 2.93.10 everything works as it used to.

**System Information** Operating system: Linux-5.15.0-48-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-30 14:38, hash: `42eda155df` 3.3.0 LTS release shows the same wrong behaviour Worked: 2.93.10 LTS **Short description of error** Drawing masks in Image Editor doesn't work any more. See the steps below to try it. **Exact steps for others to reproduce the error** - Open Blender - Open an empty image editor and open any image you got available. Or create a new empty one. - Switch the Image Editor from "View" to "Mask" - Click on "New" to create a new mask - CTRL + click anywhere in the image to start drawing a new mask -> nothing happens - Press SHIFT + A to add a rectangle or circle mask -> Menu is greyed out, nothing can be added ![image.png](https://archive.blender.org/developer/F13598603/image.png) This in 3.3.0 LTS and 3.4.0 Master. In Blender 2.93.10 everything works as it used to.

Added subscriber: @SteffenD

Added subscriber: @SteffenD

#101783 was marked as duplicate of this issue

#101783 was marked as duplicate of this issue

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Did you try to enable "Spline" in the Mask Display popover?
image.png

Did you try to enable "Spline" in the Mask Display popover? ![image.png](https://archive.blender.org/developer/F13598671/image.png)

Oh wow, thanks! Now I feel kind of stupid.

But now I wonder if not showing the splines in mask mode is a sensible default?

Oh wow, thanks! Now I feel kind of stupid. But now I wonder if not showing the splines in mask mode is a sensible default?

Can be closed then... but I would raise my hand for changing the default to display splines.

Can be closed then... but I would raise my hand for changing the default to display splines.

There must be a reason for that, I'm not sure..
But yeah, enabled by default makes more sense, I think...

There must be a reason for that, I'm not sure.. But yeah, enabled by default makes more sense, I think...

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Seems to be "caused" by df2ab4e758. From discussion in D13314 it seems, that this is not intended behavior. Versioning code is there, but editor initialization was not updated.

Seems to be "caused" by df2ab4e758c7. From discussion in [D13314](https://archive.blender.org/developer/D13314) it seems, that this is not intended behavior. Versioning code is there, but editor initialization was not updated.
Member

Added subscribers: @brehiner, @da.buy

Added subscribers: @brehiner, @da.buy
Member

Added subscribers: @Amudtogal, @Sergey, @PratikPB2123

Added subscribers: @Amudtogal, @Sergey, @PratikPB2123
Member

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'
Member

Looks expected from the poll function at least. In ED_space_image_maskedit_visible_splines_poll we check for the MASK_DRAWFLAG_SPLINE flag
Later in UI_block_end_ex, Buttons are set as disabled when poll function returns false.


just like clip editor, maybe we could also set default Spline value as true for image editor
cc @Amudtogal
cc @Sergey

Looks expected from the poll function at least. In `ED_space_image_maskedit_visible_splines_poll` we check for the `MASK_DRAWFLAG_SPLINE` flag Later in `UI_block_end_ex`, Buttons are set as disabled when poll function returns false. - - - just like clip editor, maybe we could also set default Spline value as true for image editor cc @Amudtogal cc @Sergey

This issue was referenced by c3a5a0becf

This issue was referenced by c3a5a0becf7cbc68e9b0b94f669509c98ba2d98e

This issue was referenced by cbe1c1474b

This issue was referenced by cbe1c1474b1618c2134303d6ce9a9a1139974f4d

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Sergey Sharybin self-assigned this 2022-10-13 12:27:13 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101501
No description provided.